# python-opus-seti

./: .gitignore  .travis.yml  README.rst  examples.ipynb  requirements.txt  setup.cfg  tests-requirements.txt  tox.ini
jupyter_notebooks/: cli.ipynb  examples.ipynb
opus/: __init__.py  api.py  categories.py  cli.py  data.py  fields.py  files.py  images.py  metadata.py  mults.py  range.py  url.py  wget.py
opus/cli/: cassini.py  cli.py
tests/: test_api.py  test_categories.py  test_cli.py  test_cli_cassini.py  test_data.py  test_fields.py  test_files.py  test_images.py  test_metadata.py  test_mults.py  test_url.py  test_wget.py
tests/api/: categories.json  data.json  data_all.json  data_vims.json  fields.json  files.json  json.sh
tests/api/categories/: COISS_2001-1459551663_1459568594-N1459551972_1.json  obs_general.json
tests/api/fields/: target.json
tests/api/files/: COISS_2001-1459551663_1459568594-N1459551972_1.json  COVIMS_0020-2007137T054828_2007143T180509-v1558621524_1_VIS.json  S_CUBE_CO_VIMS_1558621524_VIS.json  S_IMG_CO_ISS_1459551972_N.json  co-iss-n1487299402.json  go-ssi-c0349875100.json
tests/api/image/med/: COISS_2001-1459551663_1459568594-N1459551972_1.json  S_IMG_CO_ISS_1459551972_N.json
tests/api/images/: med.json
tests/api/meta/: result_count.json
tests/api/meta/mults/: target.json
tests/api/meta/range/endpoints/: RINGGEOringradius1.json  ringradius1.json
tests/api/metadata/: S_IMG_CO_ISS_1459551972_N.json
tests/api/metadata_v2/: COISS_2001-1459551663_1459568594-N1459551972_1.json
tests/data/: N1459551972_1.LBL
