[metadata]
name = opus-seti
author = Benoit Seignovert
author-email = python@seignovert.fr
summary = Python package for OPUS (NASA-PDS/Seti) search tool API
description-file = README.rst
description-content-type = text/x-rst; charset=UTF-8
home-page = http://github.com/seignovert/python-opus-seti
license = MIT
keywords = NASA, Seti, Ring-node, API
classifier = 
    Development Status :: 4 - Beta
    Natural Language :: English
    License :: OSI Approved :: MIT License
    Programming Language :: Python
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3.6
    Topic :: Scientific/Engineering
    Topic :: Scientific/Engineering :: Astronomy
    Topic :: Scientific/Engineering :: Atmospheric Science
    Topic :: Scientific/Engineering :: Physics
    Topic :: Scientific/Engineering :: Visualization

[files]
packages =
    opus

[wheel]
universal = 1

[tool:pytest]
addopts = -vv --cov-report term-missing --cov-report html --cov-report xml

[entry_points]
console_scripts =
    opus = opus.cli:data
    opus-meta = opus.cli:metadata
    opus-preview = opus.cli:image
    opus-vims = opus.cli.cassini:vims
